prevent submit button in small-form from overlapping the text inside

--- a/src/assets/book-summary.css
+++ b/src/assets/book-summary.css
@@ -161,7 +161,7 @@
 }
 .single-small-form input {
 	float: left;
-	padding: 0.3rem;
+	padding: 0.3rem 1.8rem .3rem .3rem;
 	border-style: dashed;
 	border-width: 2px;
 	border-radius: 0.4rem;
